Modify css rules for Header component to ensure border shadow is visible

--- a/src/styles/sass/Header.scss
+++ b/src/styles/sass/Header.scss
@@ -9,6 +9,8 @@
   height: 70px;
   padding-left: 10px;
   padding-right: 10px;
+
+  z-index: 1;
 }
 
 #header-site-details {
