--- a/src/styles/sass/Login.css
+++ b/src/styles/sass/Login.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #fffde4;
   height: 100%;
 }
 
